# coding-rl-envs

./: .gitignore  README.md  curriculum.json
cpp/cacheforge/: CMakeLists.txt  Dockerfile  Dockerfile.test  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.test.yml  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml  vcpkg.json
cpp/cacheforge/environment/: code_checks.py  reward.py  scoring.py  setup.py
cpp/cacheforge/scenarios/: 01-deadlock-under-load.md  02-memory-corruption-crashes.md  03-security-audit-findings.md  04-startup-failures.md  05-replication-eviction-anomalies.md  README.md
cpp/cacheforge/solution/: solve.sh
cpp/cacheforge/src/: main.cpp
cpp/cacheforge/tests/: test.sh
cpp/chronomesh/: CMakeLists.txt  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
cpp/chronomesh/environment/: __init__.py  reward.py  setup.py
cpp/chronomesh/migrations/: 001_core.sql
cpp/chronomesh/scenarios/: 01_dispatch_priority_incident.md  02_routing_cost_anomaly.md  03_vessel_workflow_stuck.md  04_security_bypass_postmortem.md  05_statistics_sla_drift.md  README.md
cpp/chronomesh/shared/: contracts.txt
cpp/chronomesh/src/: allocator.cpp  contracts.cpp  model.cpp  policy.cpp  queue.cpp  resilience.cpp  routing.cpp  security.cpp  statistics.cpp  workflow.cpp
cpp/chronomesh/tests/: test.sh  test_main.cpp
cpp/obsidianmesh/: CMakeLists.txt  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
cpp/obsidianmesh/environment/: __init__.py  reward.py  setup.py
cpp/obsidianmesh/scenarios/: README.md  alert_004_circuit_breaker_cascade.md  incident_001_auth_token_rejection.md  incident_002_event_replay_data_loss.md  slack_005_workflow_bottleneck.md  ticket_003_statistics_billing_discrepancy.md
cpp/obsidianmesh/scripts/: seed_orders.sql
cpp/obsidianmesh/solution/: solve.sh
cpp/obsidianmesh/src/: allocator.cpp  concurrency.cpp  config.cpp  contracts.cpp  events.cpp  model.cpp  policy.cpp  queue.cpp  resilience.cpp  routing.cpp  security.cpp  statistics.cpp  telemetry.cpp  workflow.cpp
cpp/obsidianmesh/tests/: baseline_passing.txt  test.sh  test_main.cpp  train.sh
cpp/signalstream/: CMakeLists.txt  Dockerfile  Dockerfile.test  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.test.yml  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
cpp/signalstream/environment/: reward.py  setup.py
cpp/signalstream/scenarios/: 01-service-crash-on-startup.md  02-data-corruption-under-load.md  03-security-audit-findings.md  04-alerting-system-failures.md  05-aggregation-precision-loss.md  README.md
cpp/signalstream/solution/: solve.sh
cpp/signalstream/src/: aggregate.cpp  alert.cpp  concurrency.cpp  config.cpp  events.cpp  gateway.cpp  ingest.cpp  memory.cpp  query.cpp  router.cpp  security.cpp  storage.cpp  telemetry.cpp  transform.cpp
cpp/signalstream/tests/: test.sh  test_main.cpp
python/nexustrade/: Dockerfile.test  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  conftest.py  docker-compose.test.yml  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  pyproject.toml  requirements.txt  task.toml
python/nexustrade/environment/: __init__.py  config.yaml  reward.py  setup.py
python/nexustrade/scenarios/: 01-order-exposure-breach.md  02-market-close-orders.md  03-penny-discrepancy.md  04-token-refresh-storm.md  05-cache-stampede.md  README.md
python/nexustrade/scripts/: verify_environment.py
python/nexustrade/shared/: __init__.py
python/nexustrade/solution/: solve.sh
python/nexustrade/tests/: __init__.py  test.sh
python/talentflow/: .env.example  Dockerfile  README.md  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  conftest.py  docker-compose.test.yml  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  task.toml
python/talentflow/apps/: __init__.py
python/talentflow/environment/: __init__.py  config.yaml  reward.py  setup.py
python/talentflow/scenarios/: 01-oauth-csrf-attack.md  02-scheduled-tasks-wrong-time.md  03-candidate-matching-scores-missing.md  04-database-connection-timeouts.md  05-candidate-score-calculations-wrong.md  README.md
python/talentflow/scripts/: reset_environment.sh  run_tests.sh  verify_environment.py
python/talentflow/solution/: solve.sh
python/talentflow/talentflow/: __init__.py  celery.py  urls.py  wsgi.py
python/talentflow/tests/: __init__.py  test.sh
rust/geneforge/: AUDIT_SUMMARY.md  Cargo.toml  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
rust/geneforge/environment/: reward.py  setup.rs
rust/geneforge/migrations/: 001_core.sql  002_reports.sql
rust/geneforge/scenarios/: 01-qc-batch-rejections.md  02-consent-compliance-audit.md  03-statistical-analysis-errors.md  04-pipeline-failures.md  05-resilience-circuit-breaker.md  README.md
rust/geneforge/scripts/: seed_samples.sql
rust/geneforge/shared/: contracts.rs
rust/geneforge/solution/: solve.sh
rust/geneforge/src/: aggregator.rs  consent.rs  lib.rs  pipeline.rs  qc.rs  reporting.rs  resilience.rs  statistics.rs
rust/geneforge/tests/: README.md  anti_tamper_tests.rs  chaos_replay_tests.rs  clinical_flow_tests.rs  fault_injection_tests.rs  test.sh  (+5 more)
rust/quantumcore/: Cargo.toml  Dockerfile.test  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.test.yml  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
rust/vaultfs/: .dockerignore  Cargo.toml  Dockerfile  TASK.md  TASKS_ALTERNATIVE.md  TASKS_GREENFIELD.md  docker-compose.yml  instruction-alternative.md  instruction-greenfield.md  instruction.md  task.toml
(+3759 files in other folders)
